--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Library App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -16,32 +16,55 @@
 
         <div class="grid-container"></div>
 
-
-        <!-- The Modal -->
-        <div id="myModal" class="modal">
-            <h1>Add a book</h1>
-            <!-- Modal content -->
-            <div class="modal-content">
-                <form action="" id="add-book-form">
-                    <label for="ftitle">Title: </label>
-                    <input type="text" id="ftitle" name="ftitle">
-
-                    <label for="fauthor">Author: </label>
-                    <input type="text" id="fauthor" name="fauthor">
-
-                    <label for="fdate">Publish date: </label>
-                    <input type="date" id="fdate" name="fdate">
-
-                    <label for="fpages">Number of pages: </label>
-                    <input type="number" id="fpages" name="fpages">
-
-                    <input type="submit" value="Add Book" id="close-modal">
-                </form>
-                <button id="close-modal">Add book</button>
-            </div>
-        
-        </div>
     </main>
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Add a book</h2>
+            </div>
+            <form action="" id="add-book-form">
+                <table>
+                    <tr class="table-row">
+                        <td class="table-left">
+                            <label for="ftitle">Title: </label>
+                        </td>
+                        <td class="table-right">
+                            <input type="text" id="ftitle" name="ftitle"><br>
+                        </td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-left">
+                            <label for="fpages">Number of pages: </label>
+                        </td>
+                        <td class="table-right">
+                            <input type="number" id="fpages" name="fpages"><br>
+                        </td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-left">
+                            <label for="fauthor">Author: </label>
+                        </td>
+                        <td class="table-right">
+                            <input type="text" id="fauthor" name="fauthor"><br>
+                        </td>
+                    </tr>
+                    <tr class="table-row">
+                        <td class="table-left">
+                            <label for="fdate">Publish date: </label>
+                        </td>
+                        <td class="table-right">
+                            <input type="date" id="fdate" name="fdate"><br>
+                        </td>
+                    </tr>
+                </table>
+
+                <input type="submit" value="Add Book" id="close-modal">
+            </form>
+        </div>
+    
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
